--- a/src/pages/test.css
+++ b/src/pages/test.css
@@ -1,14 +1,27 @@
+.viewPort {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    background-color: hsl(50, 33%, 25%);
+}
+
+#particles-js {
+    height: 100vh;
+}
+
 .main___containers {
     background: #fca31c;
-    position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     padding: 5px;
     border-radius: 5px;
-    border:1px solid;
-    width:60%
+    border: 1px solid;
+    width: 55%;
+    box-sizing: border-box;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .form___section {
