--- a/src/pages/test.css
+++ b/src/pages/test.css
@@ -1,3 +1,8 @@
+*{
+    margin:0;
+    padding: 0;
+}
+
 .viewPort {
     position: relative;
     display: flex;
@@ -43,4 +48,28 @@
     justify-content: center;
     border-radius: 5px;
     border: 1px solid
+}
+
+
+
+.Background__home{
+    background:url('../media/Image/bg2.png'),linear-gradient(rgb(228, 173, 173), rgb(196, 196, 108));
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height:100vh;
+    width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.midBox{
+    background: #fff;
+    width:60%;
+    height: 55%;
+    box-sizing: border-box;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 5%;
 }
